Feat: Stack creation
